; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_increment_user_object_rating.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_increment_user_object_rating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_hints_increment_user_object_rating = type { i32, i32, i32, i32 }

@LEV_HINTS_INCREMENT_USER_OBJECT_RATING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @increment_user_object_rating(%struct.lev_hints_increment_user_object_rating* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lev_hints_increment_user_object_rating*, align 8
  %4 = alloca i32*, align 8
  store %struct.lev_hints_increment_user_object_rating* %0, %struct.lev_hints_increment_user_object_rating** %3, align 8
  %5 = load %struct.lev_hints_increment_user_object_rating*, %struct.lev_hints_increment_user_object_rating** %3, align 8
  %6 = getelementptr inbounds %struct.lev_hints_increment_user_object_rating, %struct.lev_hints_increment_user_object_rating* %5, i32 0, i32 3
  %7 = load i32, i32* %6, align 4
  %8 = call i32* @conv_user_id(i32 %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %30

11:                                               ; preds = %1
  %12 = load i32*, i32** %4, align 8
  %13 = load %struct.lev_hints_increment_user_object_rating*, %struct.lev_hints_increment_user_object_rating** %3, align 8
  %14 = getelementptr inbounds %struct.lev_hints_increment_user_object_rating, %struct.lev_hints_increment_user_object_rating* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, 255
  %17 = load %struct.lev_hints_increment_user_object_rating*, %struct.lev_hints_increment_user_object_rating** %3, align 8
  %18 = getelementptr inbounds %struct.lev_hints_increment_user_object_rating, %struct.lev_hints_increment_user_object_rating* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.lev_hints_increment_user_object_rating*, %struct.lev_hints_increment_user_object_rating** %3, align 8
  %21 = getelementptr inbounds %struct.lev_hints_increment_user_object_rating, %struct.lev_hints_increment_user_object_rating* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.lev_hints_increment_user_object_rating*, %struct.lev_hints_increment_user_object_rating** %3, align 8
  %24 = getelementptr inbounds %struct.lev_hints_increment_user_object_rating, %struct.lev_hints_increment_user_object_rating* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @LEV_HINTS_INCREMENT_USER_OBJECT_RATING, align 4
  %27 = sub nsw i32 %25, %26
  %28 = ashr i32 %27, 8
  %29 = call i32 @user_object_rating_increment(i32* %12, i32 %16, i32 %19, i32 %22, i32 %28)
  store i32 %29, i32* %2, align 4
  br label %31

30:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %11
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32* @conv_user_id(i32) #1

declare dso_local i32 @user_object_rating_increment(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
